# externc-libm

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
src/math/: acos.rs  acosf.rs  acosh.rs  acoshf.rs  asin.rs  asinf.rs  asinh.rs  asinhf.rs  atan.rs  atan2.rs  atan2f.rs  atanf.rs  atanh.rs  atanhf.rs  cbrt.rs  cbrtf.rs  ceil.rs  ceilf.rs  copysign.rs  copysignf.rs  cos.rs  cosf.rs  cosh.rs  coshf.rs  erf.rs  erfc.rs  erfcf.rs  erff.rs  exp.rs  exp10.rs  exp10f.rs  exp2.rs  exp2f.rs  expf.rs  expm1.rs  expm1f.rs  fabs.rs  fabsf.rs  fdim.rs  fdimf.rs  (+72 more)
